# Machine-Translator-with-TFX

./: .gitignore  README.md  pyproject.toml
pipelines/: pipeline.py  transform.py
pipelines/custom_executor/: json_executor.py
pipelines/metadata/machine-translator/: metadata.db
utils/: json2ndjson.py
