[tool.poetry]
name = "machine-translator-with-tfx"
version = "0.1.0"
description = "Kor-Eng Machine Translator training and running on TFX Pipeline"
authors = ["steelbear <steelbear@kunsan.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tfx = "^1.14.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
